--- a/app/assets/lang/_custom.toml
+++ b/app/assets/lang/_custom.toml
@@ -4,17 +4,17 @@
 title = "Launcher-Demo"
 
 [ejs.landing]
-mediaGitHubURL = "https://github.com/BabyBear7/launcher-demo"
+mediaGitHubURL = "https://github.com/jooho1234/33ARCADE"
 mediaTwitterURL = "#"
 mediaInstagramURL = "#"
 mediaYouTubeURL = "#"
 mediaDiscordURL = "https://discord.gg/ReY7HJY7w6"
 
 [ejs.settings]
-sourceGithubLink = "https://github.com/BabyBear7/launcher-demo"
-supportLink = "https://github.com/BabyBear7/launcher-demo/issues"
+sourceGithubLink = "https://github.com/jooho1234/33ARCADE"
+supportLink = "https://github.com/jooho1234/33ARCADE/issues"
 
 [ejs.welcome]
-welcomeHeader = "런처 데모 페이지입니다"
+welcomeHeader = "welcome To 33ARCADE"
 welcomeDescription = "해당 런처는 '아이곰(discord: babybear7)'에 의해 제작되었습니다."
 welcomeDescCTA = "몇번만 더 클릭하시면 됩니다!"
